[project]
name = "interviewer_agent"
version = "0.1.0"
description = "interviewer_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
interviewer_agent = "interviewer_agent.main:run"
run_crew = "interviewer_agent.main:run"
train = "interviewer_agent.main:train"
replay = "interviewer_agent.main:replay"
test = "interviewer_agent.main:test"
run_with_trigger = "interviewer_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
